@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST libxfce4util-4.5.92.tar.bz2 393765 RMD160 eb77be94dfe26682a8c00ff0b1b65bd1c7472d4b SHA1 333865f93cdadc2523edd53879277e74ab3337f1 SHA256 6549590b0fa5081872dbdedbda7bd0b63b1bb85019b91b23bd615ce423c77d80
-EBUILD libxfce4util-4.5.92.ebuild 429 RMD160 256da75dac3651ebc260b0bae35974b28fba11e5 SHA1 1412174e281cbffc34371a9a14b45d11f9ccc4ea SHA256 812b068dfeb7aa2e16ee8cd518fa7cb5665a5ac8ccaec4efcb240125e7875510
-EBUILD libxfce4util-9999.ebuild 429 RMD160 256da75dac3651ebc260b0bae35974b28fba11e5 SHA1 1412174e281cbffc34371a9a14b45d11f9ccc4ea SHA256 812b068dfeb7aa2e16ee8cd518fa7cb5665a5ac8ccaec4efcb240125e7875510
-MISC ChangeLog 693 RMD160 d31a1fb2a5cf457d52d97f24de6fbf74cd6ecc0a SHA1 d451d23d33def095cd9d69249fd9c35c236a1caa SHA256 6a0ef322bcf71524689e6242150ac343c0521e2349f9822e04a091f497260110
+EBUILD libxfce4util-4.5.92.ebuild 540 RMD160 775aaaa50a0e5a803999c261b5c70b0df302c665 SHA1 165949febd5c3248eca22ead9d3a47618911b328 SHA256 adef3c32bdba72eac582f7ba642642153119e2b8fd484162f30f0fd62dadd440
+EBUILD libxfce4util-9999.ebuild 562 RMD160 dbc8b1b2d335d83f9bb3f282c77b0bfbf003fe2b SHA1 fe0ab7e54c5ee0b8f39429d5e87ea4769b49b377 SHA256 cd2d8cb5516f3373ec5f1f1a92d748dc40d0494b5a04bfe946cf88a67d44c62f
+MISC ChangeLog 818 RMD160 78f948a5d8890c37a3611f7a9c25ad20ecf1b025 SHA1 d0dcfb88b64da46368f86357a319d30540319ef8 SHA256 4302d096a14b78f3934ecdb9acb2c37788f5c60f83daab887f69dd35c5bedc4e
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkdthgACgkQKhnDs22gwa97RACg3eKQKTm7riRyry+a56bONDVC
-oZwAnjuYA98fqjggTZoNBNXvofLlPXMs
-=tDs9
+iEYEARECAAYFAklK3awACgkQKhnDs22gwa9QFQCgmcMZfuTCUSJwwsACBSPiBuyO
+ERYAn2DXmF0pX4zvKj3KFQNxJurrpIsO
+=svPB
 -----END PGP SIGNATURE-----
