@@ -11,8 +11,14 @@ xfce4_core
 DESCRIPTION="Basic utilities library"
 HOMEPAGE="http://www.xfce.org/projects/libraries"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
-IUSE="debug"
+IUSE="debug doc"
 
 RDEPEND=">=dev-libs/glib-2.6:2"
+DEPEND="${RDEPEND}
+	doc? ( dev-util/gtk-doc )"
+
+pkg_setup() {
+	XFCE_CONFIG+=" $(use_enable doc gtk_doc)"
+}
 
 DOCS="AUTHORS ChangeLog NEWS README README.Kiosk THANKS TODO"
